desktoparrange (0.35) unstable; urgency=medium

  * action "set mosaicked", four parameters.
    maxrows maxcols are optional, if not present will assume 0
      set mosaicked rows cols [maxrows maxcols]

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Tue, 18 Oct 2022 10:35:35 +0200

desktoparrange (0.34) unstable; urgency=medium

  * implement daemon action "windowinfo all"
    to list relevant info on all open windows
    $ desktoparrange.sh windowinfo all
  * implement daemon action "windowinfo select"
    to list relevant info on selected windows
    $ desktoparrange.sh windowinfo select
  * code improvement:

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Sun, 16 Oct 2022 16:48:39 +0200

desktoparrange (0.33) unstable; urgency=medium

  * command line:
    - write parameters to the communication pipe in a single line;
    the daemon reads this line of text and rebuilds the command line.

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Sat, 15 Oct 2022 07:46:45 +0200

desktoparrange (0.32) unstable; urgency=medium

  * new program option: windowinfo windowId [ windowId ] ...
    - lists the relevant information of a window
    We will use it to write rules that select an set window properties.
  * Window Mosaic:
    when mosaic has only one row or one column then desktoparrange will 
    maximize windows horizontally or vertically
  * Continue developing the interactive command "desktoparrange"

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Fri, 14 Oct 2022 12:07:15 +0200

desktoparrange (0.31) unstable; urgency=medium

  * the daemon responds to interactive commands.
    - Usage:
      desktoparrange.sh command action [: action] [: action] ...
    - command desktoparrange
      Arrange the current desktop,
      Example: Set windows layout in horizontal mosaic (1 column), and undecorate:
      $ desktoparrange.sh desktoparrange set mosaicked  0 1 : set undecorated

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Wed, 12 Oct 2022 21:49:27 +0200
